--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -63,7 +63,7 @@
           {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
           use both the "grid" and "grid-Ncol" class where "N" can be any number
           from 1 to 12 and will create that number of columns.  --}}
-          <div class="abilities flexcol">
+           {{!--<div class="abilities flexcol">
             {{#each system.abilities as |ability key|}}
             <div class="ability flexrow flex-group-center">
               <label for="system.abilities.{{key}}.value" class="resource-label rollable flexlarge align-left" data-roll="d20+@abilities.{{key}}.mod" data-label="{{ability.label}}">{{ability.label}}</label>
@@ -71,7 +71,16 @@
               <span class="ability-mod rollable" data-roll="d20+@abilities.{{key}}.mod" data-label="{{ability.label}}">{{numberFormat ability.mod decimals=0 sign=true}}</span>
             </div>
             {{/each}}
+          </div>--}}
+
+        <div class="resource flex-group-center">
+          <label for="system.thingy.value" class="resource-label">thingy</label>
+          <div class="resource-content flexrow flex-center flex-between">
+          <input type="text" name="system.thingy.value" value="{{system.power.value}}" data-dtype="Number"/>
+          <span> / </span>
+          <input type="text" name="system.power.max" value="{{system.power.max}}" data-dtype="Number"/>
           </div>
+        </div>
         </aside>
 
         {{!-- For the main features list, span the right two columns --}}
